# python-markdown-math

./: .travis.yml  LICENSE  MANIFEST.in  README.md  changelog  math.py  mdx_math.py  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: main.yml
.gitweb/: description
test_data/: beginend.html  beginend.mkd  beginend_inside_inline.html  beginend_inside_inline.mkd  beginend_inside_standalone.html  beginend_inside_standalone.mkd  beginend_preview.html  inline.html  inline_asciimath.html  inline_asciimath.mkd  inline_gitlab.mkd  inline_inside_standalone.html  inline_inside_standalone.mkd  inline_latex.mkd  inline_latex_escaped.html  inline_latex_escaped.mkd  inline_latex_inside_code.html  inline_latex_inside_code.mkd  inline_preview.html  inline_tex.mkd  inline_tex_disabled.html  inline_tex_escaped.html  inline_tex_escaped.mkd  standalone.html  standalone_gitlab.html  standalone_gitlab.mkd  standalone_gitlab_nested.html  standalone_gitlab_nested.mkd  standalone_latex.mkd  standalone_latex_escaped.html  standalone_latex_escaped.mkd  standalone_preview.html  standalone_tex.mkd
