[metadata]
name = python-markdown-math
version = 0.6
description = Math extension for Python-Markdown
long_description = file: README.md
long_description_content_type = text/markdown
author = Dmitry Shachnev
author_email = mitya57@gmail.com
url = https://github.com/mitya57/python-markdown-math
license = BSD 3-Clause License

[options]
py_modules = mdx_math
install_requires = Markdown>=3.0

[options.entry_points]
markdown.extensions =
    mdx_math = mdx_math:MathExtension

[bdist_wheel]
universal = 1
